  started with #11243, #11248, #11268, #11420 and #11675.
  (Sébastien Hinderer, review by David Allsopp and Florian Angeletti)

- #12569, #12570: remove 'otherlibraries' as a prerequisite for 'runtop';
  use 'runtop-with-otherlibs' to use a library from otherlibs/
  (Gabriel Scherer, review by Sébastien Hinderer, suggestion by David Allsopp)

### Bug fixes:

- #12590, #12595: fix a race in `caml_collect_gc_stats_sample`
  (B. Szilvasy, review by Gabriel Scherer)

- #12595, #12597: fix a race in `caml_clear_gc_stats_sample`
  (Gabriel Scherer, review by B. Szilvasy, report by B. Szilvasy)

- #12580: Fix location of alias pattern variables.
  (Chris Casinghino, review Gabriel Scherer, report by Milo Davis)

- #12583: Add a closing event for when `EV_MAJOR_EPHE_MARK` is complete
  (Sudha Parimala, review by Gabriel Scherer)

- #12566: caml_output_value_to_malloc wrongly uses `caml_stat_alloc`
  instead of `malloc` since 4.06, breaking (in pooled mode) user code
  that uses `free` on the result. Symmetrically,
  caml_input_value_from_malloc should use `free`.
  (Gabriel Scherer, review by Xavier Leroy and Enguerrand Decorne,
   report by Ido Yariv)

- #12490: Unix: protect the popen_processes hashtable with a mutex
  (Gabriel Scherer, report by Olivier Nicole, review by Xavier Leroy)

- #11931: Fix tricky typing bug with type substitutions
  (Stephen Dolan, review by Leo White and Jacques Garrigue)

- #12037, #12171: Fix get_extern_state potential NULL dereference.
  (Alexander Skvortsov, report by Török Edwin,
   design by Gabriel Scherer, Xavier Leroy)

- #12635: Fix get_intern_state potential NULL dereference.
  (Antonin Décimo, review by KC Sivaramakrishnan)

- #12032, #12059: Bug fixes related to compilation of recursive definitions
  (Vincent Laviron, report by Victoire Noizet, review by Gabriel Scherer)

* #12145: Loopy constraints cause ocamlc to loop.
  Fixed by completely removing the call to `update_type` in