@@ -717,7 +717,8 @@ runtime_NATIVE_C_SOURCES = \
   $(runtime_NATIVE_ONLY_C_SOURCES:%=runtime/%.c)
 
 ## Header files generated by configure
-runtime_CONFIGURED_HEADERS = $(addprefix runtime/caml/, m.h s.h version.h)
+runtime_CONFIGURED_HEADERS = \
+  $(addprefix runtime/caml/, exec.h m.h s.h version.h)
 
 ## Header files generated by make
 runtime_BUILT_HEADERS = $(addprefix runtime/, \
@@ -1860,7 +1861,7 @@ distclean: clean
 	$(MAKE) -C stdlib distclean
 	$(MAKE) -C testsuite distclean
 	rm -f tools/eventlog_metadata tools/*.bak
-	rm -f utils/config.generated.ml
+	rm -f utils/config.common.ml utils/config.generated.ml
 	rm -f compilerlibs/META
 	rm -f boot/ocamlrun boot/ocamlrun.exe boot/camlheader \
 	      boot/flexdll_*.o boot/flexdll_*.obj \
