@@ -102,6 +102,15 @@ AC_SUBST([OCAML_VERSION_MINOR], [OCAML__VERSION_MINOR])
 AC_SUBST([OCAML_VERSION_PATCHLEVEL], [OCAML__VERSION_PATCHLEVEL])
 AC_SUBST([OCAML_VERSION_EXTRA], [OCAML__VERSION_EXTRA])
 AC_SUBST([OCAML_VERSION_SHORT], [OCAML__VERSION_SHORT])
+AC_SUBST([MAGIC_PREFIX], [MAGIC__PREFIX])
+AC_DEFINE([MAGIC_PREFIX], ["][MAGIC__PREFIX]["])
+AC_SUBST([MAGIC_VERSION], [MAGIC__VERSION])
+AC_DEFINE([MAGIC_VERSION], ["][MAGIC__VERSION]["])
+AC_SUBST([EXEC_FORMAT], [EXEC__FORMAT])
+AC_DEFINE([EXEC_FORMAT], ["][EXEC__FORMAT]["])
+AC_SUBST([MAGIC_LENGTH], [MAGIC__LENGTH])
+AC_SUBST([CMX_FORMAT])
+AC_SUBST([CMXA_FORMAT])
 AC_SUBST([CC])
 AC_SUBST([DIFF_FLAGS])
 AC_SUBST([CSC])
@@ -229,9 +238,11 @@ AC_CONFIG_FILES([stdlib/sys.ml])
 AC_CONFIG_FILES([manual/src/version.tex])
 AC_CONFIG_FILES([manual/src/html_processing/src/common.ml])
 AC_CONFIG_FILES([ocamltest/ocamltest_config.ml])
+AC_CONFIG_FILES([utils/config.common.ml])
 AC_CONFIG_FILES([utils/config.generated.ml])
 AC_CONFIG_HEADERS([runtime/caml/m.h])
 AC_CONFIG_HEADERS([runtime/caml/s.h])
+AC_CONFIG_HEADERS([runtime/caml/exec.h])
 AC_CONFIG_HEADERS([runtime/caml/version.h])
 AC_CONFIG_FILES([compilerlibs/META])
 AC_CONFIG_FILES([otherlibs/dynlink/META])
@@ -242,6 +253,7 @@ AC_CONFIG_FILES([stdlib/META])
 AC_DEFINE([OCAML_VERSION_MAJOR], [OCAML__VERSION_MAJOR])
 AC_DEFINE([OCAML_VERSION_MINOR], [OCAML__VERSION_MINOR])
 AC_DEFINE([OCAML_VERSION_PATCHLEVEL], [OCAML__VERSION_PATCHLEVEL])
+AC_DEFINE([EXEC_MAGIC_LENGTH], [MAGIC__LENGTH])
 m4_if([OCAML__VERSION_EXTRA],[], [],
   [AC_DEFINE([OCAML_VERSION_ADDITIONAL], ["][OCAML__VERSION_EXTRA]["])
   AC_DEFINE([OCAML_VERSION_EXTRA], ["][OCAML__VERSION_EXTRA]["])])
@@ -2298,6 +2310,12 @@ AS_IF([test x"$enable_flambda" = "xyes"],
     [flambda_invariants=false])],
   [flambda=false
   flambda_invariants=false])
+
+AS_IF([$flambda],
+  [CMX_FORMAT=CMX_FLAMBDA__FORMAT
+  CMXA_FORMAT=CMXA_FLAMBDA__FORMAT],
+  [CMX_FORMAT=CMX__FORMAT
+  CMXA_FORMAT=CMXA__FORMAT])
 
 AS_IF([test x"$enable_cmm_invariants" = "xyes"],
   [cmm_invariants=true],
