@@ -1,6 +1,6 @@
 == Magic numbers
 
-The magic numbers in `config.common.ml` are included in the header of
+The magic numbers in `config.common.ml.in` are included in the header of
 compiled files produced by the OCaml compiler. Different kind of files
 (cmi, cmo, cmx, cma, executables, etc.) get different magic numbers,
 and we also change the magic number whenever we change the format of
@@ -15,8 +15,8 @@ that are not at all valid compiled files, or because they come from
 a different compiler version with an incompatible file format.
 
 We say that we "bump" a magic number when we update its version part
-in config.common.ml. To bump all magic numbers is to increment the version
-of every kind of magic number.
+in build-aux/ocaml_version.m4. To bump all magic numbers is to
+increment the version of every kind of magic number.
 
 The process for bootstrapping the compiler is covered in
 link:../BOOTSTRAP.adoc[BOOTSTRAP.adoc]. There is also a test script in CI which
@@ -53,3 +53,14 @@ breaking them again without them noticing.
 
 For example, the magic numbers for 4.13 were updated in
   dd7927e156b7cb2f9
+
+Beware, though, that PR #12652, which is more recent than the commit
+mentionned above, changes the way magic numbers are defined.
+
+To bump the magic numbers to version xyz simply run:
+
+  tools/bump-magic-numbers xyz
+
+Once the bootstrap during which the magic numbers have been bumped
+has been completed, the following files need to be committed:
+boot/{ocamlc,ocamllex}, build-aux/ocaml_version.m4 and configure.
